--- a/Meeting/en.lproj/MainStoryboard.storyboard
+++ b/Meeting/en.lproj/MainStoryboard.storyboard
@@ -234,7 +234,7 @@
         <!--Add Meeting View Controller - Edit Meeting-->
         <scene sceneID="dOQ-WV-tSF">
             <objects>
-                <tableViewController id="RsV-Uc-Zqr" customClass="AddMeetingViewController" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="" id="RsV-Uc-Zqr" customClass="AddMeetingViewController" sceneMemberID="viewController">
                     <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="grouped" separatorStyle="singleLineEtched" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" id="vB9-Y3-ZAf">
                         <rect key="frame" x="0.0" y="64" width="320" height="455"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -387,10 +387,10 @@
             </objects>
             <point key="canvasLocation" x="2849" y="-139"/>
         </scene>
-        <!--View Controller - Sort Meetings-->
+        <!--Sort Meetings View Controller - Sort Meetings-->
         <scene sceneID="3Nl-3g-fBy">
             <objects>
-                <viewController id="w8N-CW-ktz" sceneMemberID="viewController">
+                <viewController id="w8N-CW-ktz" customClass="SortMeetingsViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="k9Y-pu-Kq7">
                         <rect key="frame" x="0.0" y="64" width="320" height="455"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -399,33 +399,61 @@
                                 <textInputTraits key="textInputTraits"/>
                             </searchBar>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bar" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="VdU-QV-Iqz">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="304" id="VQe-DQ-4xs"/>
+                                </constraints>
                                 <segments>
-                                    <segment title="Name"/>
-                                    <segment title="Department"/>
-                                    <segment title="Date"/>
+                                    <segment title="Name (A-Z)"/>
+                                    <segment title="Name (Z-A)"/>
+                                    <segment title="Dept (A-Z)"/>
+                                    <segment title="Dept (Z-A)"/>
                                 </segments>
+                                <connections>
+                                    <action selector="segmentButton:" destination="w8N-CW-ktz" eventType="valueChanged" id="6be-tb-ZtO"/>
+                                </connections>
                             </segmentedControl>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="a1R-l2-nmn">
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="357" id="N6u-CR-wSd"/>
+                                    <constraint firstAttribute="height" constant="368" id="bPP-WU-yTc"/>
                                 </constraints>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="Dlz-ZR-adX">
+                                        <rect key="frame" x="0.0" y="22" width="320" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="300" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        </view>
+                                        <connections>
+                                            <segue destination="RsV-Uc-Zqr" kind="push" id="Hd5-av-af2"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="w8N-CW-ktz" id="ouG-xi-nqU"/>
+                                    <outlet property="delegate" destination="w8N-CW-ktz" id="tmS-A5-DO5"/>
+                                </connections>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="lMo-47-drb" firstAttribute="leading" secondItem="k9Y-pu-Kq7" secondAttribute="leading" type="default" id="5KR-wN-gEX"/>
-                            <constraint firstItem="VdU-QV-Iqz" firstAttribute="top" secondItem="k9Y-pu-Kq7" secondAttribute="top" constant="50" id="7iH-IF-ssn"/>
-                            <constraint firstAttribute="trailing" secondItem="a1R-l2-nmn" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="AZd-2z-SY9"/>
-                            <constraint firstItem="VdU-QV-Iqz" firstAttribute="leading" secondItem="k9Y-pu-Kq7" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="PAZ-6A-a2E"/>
-                            <constraint firstItem="a1R-l2-nmn" firstAttribute="top" secondItem="VdU-QV-Iqz" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="SVZ-cG-EuR"/>
+                            <constraint firstItem="a1R-l2-nmn" firstAttribute="bottom" secondItem="k9Y-pu-Kq7" secondAttribute="bottom" type="default" id="8LP-nJ-h6d"/>
+                            <constraint firstItem="a1R-l2-nmn" firstAttribute="trailing" secondItem="k9Y-pu-Kq7" secondAttribute="trailing" type="default" id="8zx-U8-s1h"/>
+                            <constraint firstItem="a1R-l2-nmn" firstAttribute="top" secondItem="VdU-QV-Iqz" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="9HO-BC-3bQ"/>
+                            <constraint firstItem="a1R-l2-nmn" firstAttribute="leading" secondItem="k9Y-pu-Kq7" secondAttribute="leading" type="default" id="QEm-IR-ya8"/>
                             <constraint firstItem="lMo-47-drb" firstAttribute="top" secondItem="k9Y-pu-Kq7" secondAttribute="top" type="default" id="VUc-E2-Mei"/>
-                            <constraint firstItem="a1R-l2-nmn" firstAttribute="leading" secondItem="k9Y-pu-Kq7" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="iwd-1r-qOz"/>
                             <constraint firstItem="lMo-47-drb" firstAttribute="trailing" secondItem="k9Y-pu-Kq7" secondAttribute="trailing" type="default" id="mza-6o-roR"/>
-                            <constraint firstAttribute="trailing" secondItem="VdU-QV-Iqz" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="nsI-Pf-ggF"/>
+                            <constraint firstItem="VdU-QV-Iqz" firstAttribute="centerX" secondItem="lMo-47-drb" secondAttribute="centerX" type="default" id="ogY-CN-lpp"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Sort Meetings" id="NKo-Wt-uwY"/>
+                    <connections>
+                        <outlet property="segmentController" destination="VdU-QV-Iqz" id="TR7-PF-FjS"/>
+                        <outlet property="tableView" destination="a1R-l2-nmn" id="Xx6-3y-gfl"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="IJE-di-BVT" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <searchDisplayController id="hlH-vQ-MDW">
@@ -434,7 +462,7 @@
                     </connections>
                 </searchDisplayController>
             </objects>
-            <point key="canvasLocation" x="1279" y="-629"/>
+            <point key="canvasLocation" x="1633" y="-629"/>
         </scene>
         <!--Navigation Controller - Main-->
         <scene sceneID="uPt-St-gNN">
@@ -492,6 +520,14 @@
         <class className="NSLayoutConstraint" superclassName="NSObject">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
         </class>
+        <class className="SortMeetingsViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/SortMeetingsViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="segmentButton:"/>
+                <relationship kind="outlet" name="segmentController" candidateClass="UISegmentedControl"/>
+                <relationship kind="outlet" name="tableView" candidateClass="UITableView"/>
+            </relationships>
+        </class>
         <class className="ViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/ViewController.h"/>
             <relationships>
@@ -507,4 +543,7 @@
         <simulatedOrientationMetrics key="orientation"/>
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
+    <inferredMetricsTieBreakers>
+        <segue reference="fZs-s3-pjQ"/>
+    </inferredMetricsTieBreakers>
 </document>
